# tinkerlite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: editor.js  main.js  output.js  path-autocomplete.js  settings.js  sidebar.js  styles.css  tabs.js  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: scanner.php  tinker-runner.php
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  runner.rs  store.rs
