[package]
name = "tinkerlite"
version = "0.1.0"
description = "TinkerLite - PHP scratchpad for Laravel"
authors = ["you"]
edition = "2021"

[lib]
name = "tinkerlite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
keyring = "2"
uuid = { version = "1", features = ["v4"] }
